<resources>
    <string name="action_settings">Settings</string>
    <string name="action_add">New conversation</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_end_conversation">End this conversation</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_secure">Secure conversation</string>
    <string name="action_add_new_account">Add new account</string>
    <string name="action_add_phone_book">Add to address book</string>
    <string name="action_delete_contact">Delete from roster</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="title_activity_manage_accounts">Manage accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="conference_details">Group chat details</string>
    <string name="contact_details">Contact details</string>
    <string name="title_activity_sharewith">Share with conversation</string>
    <string name="title_activity_start_conversation">Start conversation</string>
    <string name="title_activity_choose_contact">Choose contact</string>
    <string name="title_activity_choose_contacts">Choose contacts</string>
    <string name="title_activity_block_list">Block list</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <plurals name="x_unread_conversations">
        <item quantity="one">%d unread conversation</item>
        <item quantity="other">%d unread conversations</item>

    </plurals>
    <string name="sending">sending…</string>
    <string name="message_decrypting">Decrypting message. Please wait…</string>
    <string name="pgp_message">OpenPGP encrypted message</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Would you like to remove %s from your roster? The conversation associated with this contact will not be removed.</string>
    <string name="block_contact_text">Would you like to block %s from sending you messages?</string>
    <string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
    <string name="block_domain_text">Block all contacts from %s?</string>
    <string name="unblock_domain_text">Unblock all contacts from %s?</string>
    <string name="contact_blocked">Contact blocked</string>
    <string name="blocked">Blocked</string>
    <string name="remove_bookmark_text">Would you like to remove %s as a bookmark? The conversation associated with this bookmark will not be removed.</string>
    <string name="register_account">Register new account on server</string>
    <string name="change_password_on_server">Change password on server</string>
    <string name="share_with">Share with…</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="invite_contact">Invite Contact</string>
    <string name="contacts">Contacts</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="crash_report_title">blabber.im has crashed</string>
    <string name="crash_report_message">By sending in stack traces you are helping the ongoing development of blabber.im\n<b>Warning:</b> This will use your XMPP account to send the stack trace to the developer.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Unable to connect to account</string>
    <string name="problem_connecting_to_accounts">Unable to connect to multiple accounts</string>
    <string name="touch_to_fix">Touch here to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="not_in_roster">The contact is not in your roster. Would you like to add it?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="preparing_image">Preparing image for transmission</string>
    <string name="action_clear_history">Clear history</string>
    <string name="clear_conversation_history">Clear Conversation History</string>
    <string name="clear_histor_msg">Are you sure you want to delete all messages within this conversation?\n\n<b>Warning:</b> This will not delete copies of those messages that are stored on other devices or servers.</string>
    <string name="also_end_conversation">End this conversation afterwards</string>
    <string name="choose_presence">Choose device</string>
    <string name="send_unencrypted_message">Send unencrypted message</string>
    <string name="send_message_to_x">Send message to %s</string>
    <string name="send_omemo_message">Send OMEMO encrypted message</string>
    <string name="send_omemo_x509_message">Send v\\OMEMO encrypted message</string>
    <string name="send_pgp_message">Send OpenPGP encrypted message</string>
    <string name="your_nick_has_been_changed">Your nickname has been changed</string>
    <string name="send_unencrypted">Send unencrypted</string>
    <string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
    <string name="openkeychain_required">OpenKeychain</string>
    <string name="openkeychain_required_long">%1$s utilizes a third party app called <b>OpenKeychain</b> to encrypt and decrypt messages and to manage your public keys.\n\nOpenKeychain is licensed under GPLv3 and available on F-Droid and Google Play.\n\n<small>(Please restart %1$s afterwards.)</small></string>
    <string name="restart">Restart</string>
    <string name="install">Install</string>
    <string name="offering">offering…</string>
    <string name="waiting">waiting…</string>
    <string name="no_pgp_key">No OpenPGP Key found</string>
    <string name="contact_has_no_pgp_key">blabber.im is unable to encrypt your messages because your contact is not announcing his or hers public key.\n\n<small>Please ask your contact to setup OpenPGP.</small></string>
    <string name="no_pgp_keys">No OpenPGP Keys found</string>
    <string name="pref_general">General</string>
    <string name="pref_accept_files_wifi">Accept files in WiFi connections</string>
    <string name="pref_accept_files_summary_wifi">When connected to wifi automatically accept files smaller than…</string>
    <string name="pref_accept_files_mobile">Accept files in mobile connections</string>
    <string name="pref_accept_files_summary_mobile">When connected with mobile data automatically accept files smaller than…</string>
    <string name="pref_accept_files_mobileroaming">Accept files in mobile roaming connections</string>
    <string name="pref_accept_files_summary_mobileroaming">When connected with mobile data in roaming automatically accept files smaller than…</string>
    <string name="pref_attachments">Attachments</string>
    <string name="pref_notification_settings">Notification</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Vibrate when a new message arrives</string>
    <string name="pref_led">LED Notification</string>
    <string name="pref_led_summary">Blink notification light when a new message arrives</string>
    <string name="pref_sound">Ringtone</string>
    <string name="pref_sound_summary">Play sound when a new message arrives</string>
    <string name="pref_send_crash">Send crash reports</string>
    <string name="pref_send_crash_summary">By sending stack traces you are helping the ongoing development of blabber.im</string>
    <string name="pref_confirm_messages">Confirm Messages</string>
    <string name="pref_confirm_messages_summary">Let your contacts know when you have received and read their messages</string>
    <string name="pref_ui_options">UI</string>
    <string name="openpgp_error">OpenKeychain reported an error</string>
    <string name="accept">Accept</string>
    <string name="error">An error has occurred</string>
    <string name="your_account">Your account</string>
    <string name="send_presence_updates">Send presence updates</string>
    <string name="receive_presence_updates">Receive presence updates</string>
    <string name="ask_for_presence_updates">Ask for presence updates</string>
    <string name="attach_choose_picture">Choose picture</string>
    <string name="preemptively_grant">Preemptively grant subscription request</string>
    <string name="error_not_an_image_file">The file you selected is not an image</string>
    <string name="error_compressing_image">Error while converting the image file</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_io_exception">General I/O error. Maybe you ran out of storage space?</string>
    <string name="error_security_exception_during_image_copy">The app you used to select this image did not provide us with enough permissions to read the file.\n\n<small>Use a different file manager to choose an image</small></string>
    <string name="account_status_unknown">Unknown</string>
    <string name="account_status_disabled">Temporarily disabled</string>
    <string name="account_status_online">Online</string>
    <string name="search">Search</string>
    <string name="next">Next</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="show_qr_code">Show QR code</string>
    <string name="advanced_mode">Advanced mode</string>
    <string name="username_hint">Username</string>
    <string name="action_check_update">Check for Updates</string>
    <string name="share_uri_with">Share URI with…</string>
    <string name="magic_create_text">We will guide you through the process of creating an account with a random password, which you can use or change to your own password on the next page. \nThen you will be able to communicate with users of this and other providers by giving them your full Jabber-ID.</string>
    <string name="your_full_jid_will_be">Your Jabber-ID will be: %s</string>
    <string name="pick_your_username">Choose your username</string>
    <string name="create_issue">Report an issue</string>
    <string name="share_as_uri">Share as XMPP URI</string>
    <string name="share_as_http">Share as HTTP link</string>
    <string name="search_messages">Search messages</string>
    <string name="server_hint">Choose provider</string>
    <string name="choose_your_server">Choose your jabber provider</string>
    <string name="welcome_server_info">We recommend the use of blabber.im as your provider.</string>
    <string name="use_own_provider">Use own provider</string>
    <string name="jabber_network">jabber.network</string>
    <string name="local_server">Local server</string>
    <string name="pref_channel_discovery">Channel discovery method</string>
    <string name="return_to_ongoing_call">Return to ongoing call</string>
    <string name="make_call">Make call</string>
    <string name="audio_call">Audio call</string>
    <string name="video_call">Video Call</string>
    <string name="search_all_conversations">All conversations</string>
    <string name="search_this_conversation">This conversation</string>
    <string name="your_server">Your provider</string>
</resources>