<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_ongoing_call"
        android:icon="?attr/icon_ongoing_call"
        android:orderInCategory="9"
        android:title="@string/return_to_ongoing_call"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_call"
        android:icon="?attr/icon_call"
        android:orderInCategory="10"
        android:title="@string/make_call"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_audio_call"
                android:icon="?attr/ic_make_audio_call"
                android:title="@string/audio_call" />
            <item
                android:id="@+id/action_video_call"
                android:icon="?attr/ic_make_video_call"
                android:title="@string/video_call" />
        </menu>
    </item>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="15"
        android:title="@string/share_uri_with"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_share_uri"
                android:title="@string/share_as_uri" />
            <item
                android:id="@+id/action_share_http"
                android:title="@string/share_as_http" />
            <item
                android:id="@+id/action_show_qr_code"
                android:title="@string/show_qr_code" />
        </menu>
    </item>

    <item
        android:id="@+id/action_block"
        android:icon="@drawable/ic_speaker_notes_off_white_24dp"
        android:orderInCategory="72"
        android:title="@string/action_block_contact"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_unblock"
        android:icon="@drawable/ic_speaker_notes_white_24dp"
        android:orderInCategory="73"
        android:title="@string/action_unblock_contact"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_advanced_mode"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="85"
        android:title="@string/advanced_mode"
        app:showAsAction="never" />
</menu>