<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_scan_qr_code"
        android:icon="?attr/icon_scan_qr_code"
        android:orderInCategory="10"
        android:title="@string/scan_qr_code"
        android:visible="@bool/show_qr_code_scan"
        app:showAsAction="always" />
    <item
        android:icon="?attr/icon_search"
        android:orderInCategory="11"
        android:title="@string/search_messages"
        android:visible="@bool/show_combined_search_options"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_search_all_conversations"
                android:title="@string/search_all_conversations" />
            <item
                android:id="@+id/action_search_this_conversation"
                android:title="@string/search_this_conversation" />
        </menu>
    </item>
    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="90"
        android:title="@string/action_accounts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_check_updates"
        android:orderInCategory="850"
        android:title="@string/action_check_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_invite_user"
        android:orderInCategory="100"
        android:title="@string/invite_user"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create_issue"
        android:orderInCategory="900"
        android:title="@string/create_issue"
        app:showAsAction="never" />
</menu>