<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="?attr/icon_search"
        android:title="@string/search"
        app:actionLayout="@layout/actionview_search"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/channel_discovery_method"
        android:orderInCategory="85"
        android:title="@string/pref_channel_discovery"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/jabber_network"
                android:title="@string/jabber_network" />
            <item
                android:id="@+id/local_server"
                android:title="@string/local_server" />
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>