<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/color_background_secondary">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:minHeight="256dp"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/instructions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/magic_create_text"
                        android:textAppearance="@style/TextAppearance.Conversations.Body1" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/pick_your_username"
                        android:textAppearance="@style/TextAppearance.Conversations.Subhead" />

                    <EditText
                        android:id="@+id/username"
                        style="@style/Widget.Conversations.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textColor="?attr/edit_text_color" />

                    <TextView
                        android:id="@+id/servertitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/choose_your_server"
                        android:textAppearance="@style/TextAppearance.Conversations.Subhead" />

                    <Spinner
                        android:id="@+id/server"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/server_hint"
                        android:prompt="@string/server_hint"
                        android:spinnerMode="dialog" />

                    <EditText
                        android:id="@+id/yourserver"
                        style="@style/Widget.Conversations.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_server"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textColor="?attr/edit_text_color"
                        android:enabled="false"
                        android:visibility="gone"/>

                    <CheckBox
                        android:id="@+id/use_own"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/use_own_provider" />

                    <TextView
                        android:id="@+id/full_jid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/your_full_jid_will_be"
                        android:textAppearance="@style/TextAppearance.Conversations.Caption"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/server_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/welcome_server_info"
                        android:textAppearance="@style/TextAppearance.Conversations.Caption" />

                    <Button
                        android:id="@+id/create_account"
                        style="@style/Widget.Conversations.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/next"
                        android:textColor="?attr/colorAccent" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/linearLayout"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:padding="8dp"
                        android:src="@mipmap/ic_launcher_foreground" />
                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</layout>